--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ six==1.15.0
 threadpoolctl==2.1.0
 tokenizers==0.10.1
 toml==0.10.2
-torch==1.8.0
+torch==1.8.1+cu101
 tornado==6.1
 tqdm==4.49.0
 traitlets==5.0.5
