--- a/configs/bert-base/train.yaml
+++ b/configs/bert-base/train.yaml
@@ -1,23 +1,24 @@
 #Args
 model_name: bert-base
-dir: /content/drive/MyDrive/FSA/results/bert-base
+dir: ./results/bert-base
 model:
   pretrained_model_name: bert-base-uncased
 args:
   output_dir: ${dir}/ckpts
   logging_dir: ${dir}/runs
-  evaluation_strategy: epoch
+  evaluation_strategy: steps
   per_device_train_batch_size: 8
   per_device_eval_batch_size: 8
   weight_decay: 0.01
-  learning_rate: 3e-5
+  learning_rate: 1e-4
   num_train_epochs: 15
   adam_epsilon: 1e-6
-  lr_scheduler_type: polynomial
+  lr_scheduler_type: cosine_with_restarts
   logging_first_step: true
-  warmup_ratio: 0.1
+  warmup_ratio: 0.0
   logging_steps: 20
   save_steps: 100
+  save_total_limit: 2
   eval_steps: 20
   seed: 42
   dataloader_num_workers: 2
