--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 appdirs==1.4.4
 backcall==0.2.0
 black==20.8b1
+blis==0.7.4
+catalogue==2.0.2
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 cycler==0.10.0
+cymem==2.0.5
 datasets==1.5.0
 decorator==4.4.2
 dill==0.3.3
@@ -19,33 +22,41 @@ ipython==7.21.0
 ipython-genutils==0.2.0
 isort==5.7.0
 jedi==0.18.0
+Jinja2==2.11.3
 joblib==1.0.1
 jupyter-client==6.1.12
 jupyter-core==4.7.1
 kiwisolver==1.3.1
+MarkupSafe==1.1.1
 matplotlib==3.3.4
 mccabe==0.6.1
 multiprocess==0.70.11.1
+murmurhash==1.0.5
 mypy-extensions==0.4.3
 nltk==3.5
 numpy==1.20.1
+omegaconf==2.0.6
 openpyxl==3.0.7
 packaging==20.9
 pandas==1.2.3
 parso==0.8.1
 pathspec==0.8.1
+pathy==0.4.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.1.2
+preshed==3.0.5
 prompt-toolkit==3.0.17
 ptyprocess==0.7.0
 pyarrow==3.0.0
 pycodestyle==2.7.0
+pydantic==1.7.3
 pyflakes==2.3.0
 Pygments==2.8.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
+PyYAML==5.4.1
 pyzmq==22.0.3
 regex==2021.3.17
 requests==2.25.1
@@ -53,6 +64,11 @@ sacremoses==0.0.43
 scikit-learn==0.24.1
 scipy==1.6.1
 six==1.15.0
+smart-open==3.0.0
+spacy==3.0.5
+spacy-legacy==3.0.2
+srsly==2.4.1
+thinc==8.0.2
 threadpoolctl==2.1.0
 tokenizers==0.10.1
 toml==0.10.2
@@ -62,8 +78,10 @@ tqdm==4.49.0
 traitlets==5.0.5
 transformers==4.4.2
 typed-ast==1.4.2
+typer==0.3.2
 typing-extensions==3.7.4.3
 urllib3==1.26.4
+wasabi==0.8.2
 wcwidth==0.2.5
 wordcloud==1.8.1
 xlrd==2.0.1
