--- a/configs/sentiment_analysis/distilbert-base/dataset.yaml
+++ b/configs/sentiment_analysis/distilbert-base/dataset.yaml
@@ -1,7 +1,7 @@
 dataset_name: fin_text
 train:
   file_path: ../data/sentiment_analysis/train.csv
-  tokenizer_name: bert-large-uncased
+  tokenizer_name: distilbert-base-uncased
 test:
   file_path: ../data/sentiment_analysis/test.csv
-  tokenizer_name: bert-large-uncased
+  tokenizer_name: distilbert-base-uncased
