--- a/configs/sentiment_analysis/pretrain-bert-base-train/train.yaml
+++ b/configs/sentiment_analysis/pretrain-bert-base-train/train.yaml
@@ -1,8 +1,8 @@
 #Args
-model_name: bert-large
-dir: ./results/sentiment_analysis/bert-large
+model_name: pretrain-bert-base-train
+dir: ./results/sentiment_analysis/pretrain-bert-base-train
 model:
-  pretrained_model_name: bert-large-uncased
+  pretrained_model_name: ./results/pretraining/bert-base-train/bert-base-train-final
 args:
   output_dir: ${dir}/ckpts
   logging_dir: ${dir}/runs
@@ -10,31 +10,33 @@ args:
   per_device_train_batch_size: 8
   per_device_eval_batch_size: 8
   weight_decay: 0.01
-  learning_rate: 1e-5
-  num_train_epochs: 15
+  learning_rate: 1e-4
+  num_train_epochs: 5
   adam_epsilon: 1e-6
   lr_scheduler_type: linear
   logging_first_step: true
   warmup_ratio: 0.0
-  logging_steps: 100
-  save_steps: 100
-  save_total_limit: 2
-  eval_steps: 100
+  logging_steps: 30
+#  save_steps: 100
+#  save_total_limit: 2
+  eval_steps: 30
   seed: 42
   dataloader_num_workers: 2
-  # load_best_model_at_end: true
-  # metric_for_best_model: eval_f1
+  load_best_model_at_end: true
+  metric_for_best_model: eval_f1
 
 trainer:
-  pretrained_tokenizer_name: bert-large-uncased
-  save_model_name: ${dir}/bert-large-final
+  pretrained_tokenizer_name: bert-base-uncased
+  save_model_name: ${dir}/pretrain-bert-base-train-final
 misc:
   squad_v2: false
   raw_predictions_file: ${dir}/test/preds/raw
   acc_metric_test_file: ${dir}/test/preds/acc.txt
   f1_macro_metric_test_file: ${dir}/test/preds/f1_macro.txt
   f1_weighted_metric_test_file: ${dir}/test/preds/f1_weighted.txt
+  confusion_matrix_test_file: ${dir}/test/preds/confusion_matrix.txt
   acc_metric_train_file: ${dir}/train/preds/acc.txt
   f1_macro_metric_train_file: ${dir}/train/preds/f1_macro.txt
   f1_weighted_metric_train_file: ${dir}/train/preds/f1_weighted.txt
   final_predictions_file: ${dir}/test/preds/final
+  confusion_matrix_train_file: ${dir}/train/preds/confusion_matrix.txt
